# percentify

./: 404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  pyprojects.toml  sitemap.xml
.github/workflows/: docs.yml  python-app.yml
docs/: SOLUTIONS_iqr_doesnt_reflect_loweru.md  documentation.md  index.md
documentation/: index.html
percentify/: __init__.py  core.py  profiling.py  stats.py
search/: search_index.json
tests/: test_core.py  test_inferential.py  test_polars.py  test_profiling.py  test_stats.py
