[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "percentify"
version = "0.4.0"
description = "One import, one line — the percentage and stats functions you actually need."
authors = [{ name = "Daniel Emakporuena", email = "danielemakporuena1@gmail.com" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "pandas",
]
keywords = ["percentage", "percent", "math", "utility", "statistics", "data-science", "multicollinearity", "vif"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["percentify"]
