[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "percentify"
version = "1.0.0"
description = "One import, one line — the everyday data science checks (VIF, PCA, outliers, missingness) you actually need."
authors = [{ name = "Daniel Emakporuena", email = "danielemakporuena1@gmail.com" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "pandas",
]
keywords = ["data-science", "statistics", "pandas", "eda", "multicollinearity", "vif", "pca", "outliers", "data-analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["percentify"]
